course logistics update

--- a/404.html
+++ b/404.html
@@ -8,19 +8,19 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/DeepLearning/images/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/DeepLearning/images/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/DeepLearning/images/favicon-16x16.png">
-<link rel="manifest" href="/DeepLearning/site.webmanifest"> 
+<link rel="manifest" href="/DeepLearning/images/site.webmanifest"> 
   <title>404 Page not found</title>
 
    
-    <link href="/DeepLearning/css/nucleus.css?1585578551" rel="stylesheet">
-    <link href="/DeepLearning/css/fontawesome-all.min.css?1585578551" rel="stylesheet">
-    <link href="/DeepLearning/css/hybrid.css?1585578551" rel="stylesheet">
-    <link href="/DeepLearning/css/featherlight.min.css?1585578551" rel="stylesheet">
-    <link href="/DeepLearning/css/perfect-scrollbar.min.css?1585578551" rel="stylesheet">
-    <link href="/DeepLearning/css/theme.css?1585578551" rel="stylesheet">
-    <link href="/DeepLearning/css/hugo-theme.css?1585578551" rel="stylesheet">
+    <link href="/DeepLearning/css/nucleus.css?1598460513" rel="stylesheet">
+    <link href="/DeepLearning/css/fontawesome-all.min.css?1598460513" rel="stylesheet">
+    <link href="/DeepLearning/css/hybrid.css?1598460513" rel="stylesheet">
+    <link href="/DeepLearning/css/featherlight.min.css?1598460513" rel="stylesheet">
+    <link href="/DeepLearning/css/perfect-scrollbar.min.css?1598460513" rel="stylesheet">
+    <link href="/DeepLearning/css/theme.css?1598460513" rel="stylesheet">
+    <link href="/DeepLearning/css/hugo-theme.css?1598460513" rel="stylesheet">
     
-      <link href="/DeepLearning/css/theme-green.css?1585578551" rel="stylesheet">
+      <link href="/DeepLearning/css/theme-green.css?1598460513" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
