--- a/404.html
+++ b/404.html
@@ -12,15 +12,15 @@
   <title>404 Page not found</title>
 
    
-    <link href="/DeepLearning/css/nucleus.css?1598559582" rel="stylesheet">
-    <link href="/DeepLearning/css/fontawesome-all.min.css?1598559582" rel="stylesheet">
-    <link href="/DeepLearning/css/hybrid.css?1598559582" rel="stylesheet">
-    <link href="/DeepLearning/css/featherlight.min.css?1598559582" rel="stylesheet">
-    <link href="/DeepLearning/css/perfect-scrollbar.min.css?1598559582" rel="stylesheet">
-    <link href="/DeepLearning/css/theme.css?1598559582" rel="stylesheet">
-    <link href="/DeepLearning/css/hugo-theme.css?1598559582" rel="stylesheet">
+    <link href="/DeepLearning/css/nucleus.css" rel="stylesheet">
+    <link href="/DeepLearning/css/fontawesome-all.min.css" rel="stylesheet">
+    <link href="/DeepLearning/css/hybrid.css" rel="stylesheet">
+    <link href="/DeepLearning/css/featherlight.min.css" rel="stylesheet">
+    <link href="/DeepLearning/css/perfect-scrollbar.min.css" rel="stylesheet">
+    <link href="/DeepLearning/css/theme.css" rel="stylesheet">
+    <link href="/DeepLearning/css/hugo-theme.css" rel="stylesheet">
     
-      <link href="/DeepLearning/css/theme-green.css?1598559582" rel="stylesheet">
+      <link href="/DeepLearning/css/theme-green.css" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
