--- a/lecture01/index.html
+++ b/lecture01/index.html
@@ -555,6 +555,15 @@
 <li><a href="https://teachablemachine.withgoogle.com/">Online Demo</a></li>
 </ul>
 
+<h3 id="lecture-goals">Lecture Goals</h3>
+
+<ul>
+<li>Understand the key components to set up a classification task</li>
+<li>Relate business problems to machine learning methods</li>
+<li>Understand how chain rule works</li>
+<li>Understand why multiclass logistic regression may not work well even for 2D data</li>
+</ul>
+
 
 
 
