--- a/lecture02/index.html
+++ b/lecture02/index.html
@@ -555,6 +555,15 @@
 <li><a href="https://youtu.be/n3R--1PYPeg">University GPU setup video</a></li>
 </ul>
 
+<h3 id="lecture-goals">Lecture Goals</h3>
+
+<ul>
+<li>Get acquainted with the basics of Python</li>
+<li>Understand the notion of hidden layers and nonlinearities</li>
+<li>Convolution layer as collection of filters applied to input tensors</li>
+<li>Why pooling helps in reducing parameters downstream</li>
+</ul>
+
 
 
 
