--- a/lecture03/index.html
+++ b/lecture03/index.html
@@ -552,6 +552,15 @@
 <li><a href="https://chicagodatascience.github.io/DeepLearning/notebooks/Overfitting_Regularization_Dropout_Example.ipynb">Notebook: Overfitting and Dropout example</a> (<a href="https://www.tensorflow.org/tutorials/keras/overfit_and_underfit">original source</a>)</li>
 </ul>
 
+<h3 id="lecture-goals">Lecture Goals</h3>
+
+<ul>
+<li>Understand how to transfer parameters previously learned for a new task</li>
+<li>Know the different ways to debug a deep network</li>
+<li>Be aware of the different engineering tricks such as dropout, batch normalization</li>
+<li>Learn why image datasets can be enhanced using data augmentation</li>
+</ul>
+
 
 
 
