--- a/lecture04/index.html
+++ b/lecture04/index.html
@@ -555,6 +555,15 @@
 <li><a href="https://github.com/bentrevett/pytorch-sentiment-analysis">Pytorch tutorial on using CNN for sentence classification: notebook 4</a></li>
 </ul>
 
+<h3 id="lecture-goals">Lecture Goals</h3>
+
+<ul>
+<li>Understand how natural language elements (such as words) are processed in an analytics workflow</li>
+<li>Understand the shortcomings of methods such as Naive Bayes, Latent Dirichlet Allocation</li>
+<li>Realize that a CNN can also be used for a NLP task (sentence classification/sentiment analysis)</li>
+<li>What is word2vec and how does it help in NLP tasks?</li>
+</ul>
+
 
 
 
