--- a/logistics/index.html
+++ b/logistics/index.html
@@ -573,7 +573,7 @@
 <li><a href="https://chicagodatascience.github.io/DeepLearning/pdfs/assignment01.pdf">Assignment 1</a>. Due 09-16. Example template <a href="https://chicagodatascience.github.io/DeepLearning/notebooks/Assignment1_Template.ipynb">ipynb</a>.</li>
 <li><a href="https://chicagodatascience.github.io/DeepLearning/pdfs/assignment02.pdf">Assignment 2</a>. Due 09-30.</li>
 <li><a href="https://chicagodatascience.github.io/DeepLearning/pdfs/assignment03.pdf">Assignment 3</a>. Due 10-21.</li>
-<li><a href="https://chicagodatascience.github.io/DeepLearning/pdfs/assignment04.pdf">Assignment 4</a>. Due 11-11.</li>
+<li><a href="https://chicagodatascience.github.io/DeepLearning/pdfs/assignment04.pdf">Assignment 4</a>. Alternate <a href="https://www.dropbox.com/s/demul9233n010nw/assignment04.pdf?dl=0">link</a>. Due 11-11.</li>
 </ol>
 
 <ul>
