lec 09 changed to q learning

--- a/lecture08/index.html
+++ b/lecture08/index.html
@@ -519,10 +519,10 @@
 
 	
 
-<h2 id="l08-reinforcement-learning-policies-state-action-value-functions-q-learning">L08 : Reinforcement Learning: Policies, State-Action Value Functions, Q-Learning</h2>
+<h2 id="l08-reinforcement-learning-policies-state-action-value-functions">L08 : Reinforcement Learning: Policies, State-Action Value Functions</h2>
 
 <ul>
-<li><a href="https://www.dropbox.com/s/uy2b3frun3yvgyp/lec08.pdf?dl=1">Lecture note</a></li>
+<li><a href="https://www.dropbox.com/s/uy2b3frun3yvgyp/lec08-lec09.pdf?dl=0">Lecture note</a></li>
 <li><a href="https://github.com/openai/gym">Openai Gym</a></li>
 <li><a href="https://pytorch.org/tutorials/intermediate/reinforcement_q_learning.html">RL in Pytorch</a> from <a href="https://github.com/pytorch/examples">Pytorch examples repository</a></li>
 </ul>
@@ -531,9 +531,8 @@
 
 <ul>
 <li>What is reinforcement learning?</li>
-<li>Basics of a Markov Decision Process</li>
-<li>Policies, Values and how to think about these two objects</li>
-<li>Bellman Expectation Equation and Bellman Optimality Equation</li>
+<li>Basics of Markov Decision Processes</li>
+<li>Policies, Value functions and how to think about these two objects</li>
 </ul>
 
 
