--- a/lecture09/index.html
+++ b/lecture09/index.html
@@ -519,11 +519,10 @@
 
 	
 
-<h2 id="l09-deep-reinforcement-learning-function-approximation-dqn-for-atari-games-alphago-zero">L09 : Deep Reinforcement Learning: Function Approximation, DQN for Atari Games, AlphaGo Zero</h2>
+<h2 id="l09-reinforcement-learning-ii-bellman-equations-q-learning">L09 : Reinforcement Learning II: Bellman Equations, Q Learning</h2>
 
 <ul>
-<li><a href="https://www.dropbox.com/s/6k2698j49sa745g/lec09.pdf?dl=1">Lecture note</a></li>
-<li><a href="https://github.com/openai/baselines">Implementations I</a></li>
+<li><a href="https://www.dropbox.com/s/uy2b3frun3yvgyp/lec08-lec09.pdf?dl=0">Lecture note</a></li>
 <li><a href="https://github.com/dennybritz/reinforcement-learning">Implementations II</a></li>
 <li><a href="http://sarvagyavaish.github.io/FlappyBirdRL/">Flappy Bird RL</a></li>
 </ul>
@@ -531,10 +530,9 @@
 <h3 id="lecture-goals">Lecture Goals</h3>
 
 <ul>
-<li>Function approximation in Q-learning</li>
-<li>DQN for Atari games</li>
-<li>Monte Carlo tree search vs Monte Carlo rollouts</li>
-<li>AlphaZero for Go, Chess and Shogi</li>
+<li>Be able to understand the difference between Bellman Expectation Equation and Bellman Optimality Equation</li>
+<li>Intuitive reasoning for the Q-Learning update rule</li>
+<li>Be able to identify relationships between state value functions, state-action value functions and policies</li>
 </ul>
 
 
