--- a/lecture12/index.html
+++ b/lecture12/index.html
@@ -519,12 +519,21 @@
 
 	
 
-<h2 id="l12-deep-learning-for-recommendation-systems">L12: Deep Learning for Recommendation Systems</h2>
+<h2 id="l12-advanced-vision-image-localization-object-detection-and-neural-style-transfer">L12: Advanced Vision: Image Localization, Object Detection and Neural Style Transfer</h2>
+
+<ul>
+<li>Image localization, object detection and YOLOv3</li>
+<li>Image segmentation</li>
+<li>Neural style transfer</li>
+<li>Optimizers: Adam vs SGD vs RMSProp</li>
+</ul>
 
 <h3 id="lecture-goals">Lecture Goals</h3>
 
 <ul>
-<li>TBD</li>
+<li>Be able to understand the architectures and loss function definitions for image localization and object detection problems</li>
+<li>Be able to understand the working of style transfer</li>
+<li>Be able to understand the differences between popular gradient based optimization techniques</li>
 </ul>
 
 
