--- a/logistics/schedule/index.html
+++ b/logistics/schedule/index.html
@@ -538,20 +538,20 @@
 
 <h4 id="l07-online-learning-a-b-testing-multi-armed-bandits-contextual-bandits">L07 : Online Learning: A/B Testing, Multi-armed Bandits, Contextual Bandits</h4>
 
-<h4 id="l08-reinforcement-learning-policies-state-action-value-functions-q-learning">L08 : Reinforcement Learning: Policies, State-Action Value Functions, Q-Learning</h4>
+<h4 id="l08-reinforcement-learning-i-policies-state-action-value-functions">L08 : Reinforcement Learning I: Policies, State-Action Value Functions</h4>
 
-<h4 id="l09-deep-reinforcement-learning-function-approximation-dqn-for-atari-games-alphago-zero">L09 : Deep Reinforcement Learning: Function Approximation, DQN for Atari Games, AlphaGo Zero</h4>
+<h4 id="l09-reinforcement-learning-ii-bellman-equations-q-learning">L09 : Reinforcement Learning II: Bellman Equations, Q Learning</h4>
 
-<h4 id="l10-advanced-nlp-attention-bert-and-transformers">L10: Advanced NLP: Attention, BERT and Transformers</h4>
+<h4 id="l10-deep-reinforcement-learning-function-approximation-dqn-for-atari-games-mcts-for-alphago">L10 : Deep Reinforcement Learning: Function Approximation, DQN for Atari Games, MCTS for AlphaGo</h4>
 
-<h4 id="l11-ootimization-strategies">L11: Ootimization Strategies</h4>
+<h4 id="l11-advanced-nlp-attention-bert-and-transformers">L11 : Advanced NLP: Attention, BERT and Transformers</h4>
 
-<h4 id="l12-deep-learning-for-recommendation-systems">L12: Deep Learning for Recommendation Systems</h4>
+<h4 id="l12-advanced-vision-image-localization-object-detection-and-neural-style-transfer">L12 : Advanced Vision: Image Localization, Object Detection and Neural Style Transfer</h4>
 
-<h4 id="lp2-project-presentations-by-students">LP2: <em>Project Presentations by Students</em></h4>
+<h4 id="lp2-project-presentations-by-students">LP2 : <em>Project Presentations by Students</em></h4>
 
 <ul>
-<li>Live project presentation during class hours. More details are provided in the project instuctions document (see logistics).</li>
+<li>Live project presentation during class hours. More details are provided in the project instructions document (see logistics).</li>
 </ul>
 
 
