--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 <li>Variational autoencoders (VAEs)</li>
 <li>Generative adversarial networks (GANs)</li>
 <li>Deep reinforcement learning and Deep Q-Network (DQN)</li>
-<li>Deep learning design choices such as optimizers (Adam), nonlinearities, embeddings, attention, dropout, batch normalization etc.</li>
+<li>Deep learning design choices such as optimizers (Adam, RMSprop), nonlinearities, embeddings, attention, dropout, batch normalization etc.</li>
 </ul>
 
 <h2 id="previous-editions">Previous Editions</h2>
