--- a/logistics/schedule/index.html
+++ b/logistics/schedule/index.html
@@ -546,7 +546,7 @@
 
 <h4 id="l11-advanced-nlp-attention-bert-and-transformers">L11 : Advanced NLP: Attention, BERT and Transformers</h4>
 
-<h4 id="l12-advanced-vision-image-localization-object-detection-and-neural-style-transfer">L12 : Advanced Vision: Image Localization, Object Detection and Neural Style Transfer</h4>
+<h4 id="l12-research-case-studies-in-deep-learning-and-reinforcement-learning">L12 : Research Case Studies in Deep Learning and Reinforcement Learning</h4>
 
 <h4 id="lp2-project-presentations-by-students">LP2 : <em>Project Presentations by Students</em></h4>
 
